# finding_shortcut

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
lr_mp/: CMakeLists.txt  arrow.cpp  lr_mp.qrc  main.cpp  mainwindow.cpp  mainwindow.h  matri.txt  matrix.txt  visualnode.h
src/: arrow.cpp  arrow.h  diagramscene.cpp  diagramscene.h  graph.cpp  graph.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  visualnode.cpp
